--- a/LearningSeeds/donations.html
+++ b/LearningSeeds/donations.html
@@ -40,7 +40,7 @@
     <div class="text1">
     <div class="boxes"><b>Empowerment Through Education:</b> <div class="smol">Providing stationary and books equips children with the tools they need to learn, grow, and succeed.</div></div>
     <div class="boxes"><b>Breaking the Cycle of Poverty:</b> <div class="smol">Education is a key factor in breaking the cycle of poverty and creating opportunities for a brighter future.</div></div>
-    <div class="boxes"><b>Community Impact:</b> <div class="smol"> Your donation not only benefits individual children but also uplifts entire communities by fostering a culture of learning and development.</div>
+    <div class="boxes"><b>Community Impact:</b> <div class="smol"> Your donation not only benefits individual children but also uplifts entire communities by fostering a culture of learning.</div>
 </div> </div>
 <h2 class="hee">How You Can Help:-</h2>
 <div class="text2">
